--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
         linear-gradient(180deg, rgba(0,0,0,.55), rgba(0,0,0,.80)),
         url("hero-bg.jpg");
       background-size: cover;
-      background-position: center;
+      background-position: center 70%;
+
       filter: saturate(1.05) contrast(1.05);
       transform: scale(1.03);
       z-index:-2;
@@ -636,6 +637,7 @@
   </script>
 </body>
 </html>
+
 
 
 
