--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       <h2>Acting</h2>
 
       <div class="video">
-        <iframe src="https://www.youtube.com/embed/N-MvHEK_2aM"
+        <iframe src="https://youtu.be/N-MvHEK_2aM"
           frameborder="0" allowfullscreen></iframe>
       </div>
 
@@ -332,3 +332,4 @@
   </script>
 </body>
 </html>
+
