--- a/index.html
+++ b/index.html
@@ -215,7 +215,8 @@
       <h2>Acting</h2>
 
       <div class="video">
-        <iframe src="https://youtu.be/N-MvHEK_2aM"
+        <iframe src="https://www.youtube.com/embed/N-MvHEK_2aM
+"
           frameborder="0" allowfullscreen></iframe>
       </div>
 
@@ -332,4 +333,5 @@
   </script>
 </body>
 </html>
+
 
