--- a/index.html
+++ b/index.html
@@ -215,9 +215,13 @@
       <h2>Acting</h2>
 
       <div class="video">
-        <iframe src="https://www.youtube.com/embed/N-MvHEK_2aM
-"
-          frameborder="0" allowfullscreen></iframe>
+        <iframe
+  src="https://player.vimeo.com/video/YOUR_VIMEO_ID"
+  frameborder="0"
+  allow="autoplay; fullscreen"
+  allowfullscreen>
+</iframe>
+
       </div>
 
       <div class="projects" style="margin-top:16px;">
@@ -333,5 +337,6 @@
   </script>
 </body>
 </html>
+
 
 
