--- a/index.html
+++ b/index.html
@@ -308,10 +308,10 @@
     <section class="card" id="links">
       <h2>Links</h2>
       <div class="links">
-        <a href="https://adpersonam.ie" target="_blank">Ad Personam Cultural Events</a>
-        <a href="https://instagram.com/" target="_blank">Instagram</a>
-        <a href="https://facebook.com/" target="_blank">Facebook</a>
-        <a href="https://linkedin.com/" target="_blank">LinkedIn</a>
+        <a href=https://adpersonam-hub.github.io/ad-personam/target="_blank">Ad Personam Cultural Events</a>
+        <a href=https://www.instagram.com/petermccamley/ target="_blank">Instagram</a>
+        <a href=https://www.facebook.com/petemccamley target="_blank">Facebook</a>
+        
       </div>
     </section>
 
@@ -337,6 +337,7 @@
   </script>
 </body>
 </html>
+
 
 
 
