--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
       <div class="video">
         <iframe
-  src="https://player.vimeo.com/video/YOUR_VIMEO_ID"
+  src="https://vimeo.com/1163790674?fl=ip&fe=ec"
   frameborder="0"
   allow="autoplay; fullscreen"
   allowfullscreen>
@@ -308,7 +308,7 @@
     <section class="card" id="links">
       <h2>Links</h2>
       <div class="links">
-        <a href=https://adpersonam-hub.github.io/ad-personam/ target="_blank">Ad Personam Cultural Events</a>
+        <a href=https://adpersonam-hub.github.io/ad-personam/ >Ad Personam Cultural Events</a>
         <a href=https://www.instagram.com/petermccamley/ target="_blank">Instagram</a>
         <a href=https://www.facebook.com/petemccamley target="_blank">Facebook</a>
         
@@ -337,6 +337,7 @@
   </script>
 </body>
 </html>
+
 
 
 
