--- a/index.html
+++ b/index.html
@@ -214,13 +214,15 @@
     <section class="card" id="acting">
       <h2>Acting</h2>
 
-      <div class="video">
-        <iframe
-  src="https://vimeo.com/1163790674?fl=ip&fe=ec"
-  frameborder="0"
-  allow="autoplay; fullscreen"
-  allowfullscreen>
-</iframe>
+     <div class="video">
+  <iframe
+    src="https://player.vimeo.com/video/1163790674"
+    frameborder="0"
+    allow="autoplay; fullscreen; picture-in-picture"
+    allowfullscreen>
+  </iframe>
+</div>
+
 
       </div>
 
@@ -337,6 +339,7 @@
   </script>
 </body>
 </html>
+
 
 
 
