--- a/index.html
+++ b/index.html
@@ -214,15 +214,15 @@
     <section class="card" id="acting">
       <h2>Acting</h2>
 
-     <div class="video">
+<div class="video">
   <iframe
-    src="https://vimeo.com/1163914424
-    "
+    src="https://player.vimeo.com/video/1163914424"
     frameborder="0"
     allow="autoplay; fullscreen; picture-in-picture"
     allowfullscreen>
   </iframe>
 </div>
+
 
 
       </div>
@@ -340,6 +340,7 @@
   </script>
 </body>
 </html>
+
 
 
 
