--- a/index.html
+++ b/index.html
@@ -311,7 +311,10 @@
     <section class="card" id="links">
       <h2>Links</h2>
       <div class="links">
-        <a href=https://adpersonam-hub.github.io/ad-personam/ >Ad Personam Cultural Events</a>
+        <a href="https://adpersonam-hub.github.io/ad-personam/" target="_blank" rel="noopener">
+  Ad Personam Cultural Events
+</a>
+
         <a href=https://www.instagram.com/petermccamley/ target="_blank">Instagram</a>
         <a href=https://www.facebook.com/petemccamley target="_blank">Facebook</a>
         
@@ -340,6 +343,7 @@
   </script>
 </body>
 </html>
+
 
 
 
