--- a/index.html
+++ b/index.html
@@ -317,7 +317,10 @@
 
         <a href=https://www.instagram.com/petermccamley/ target="_blank">Instagram</a>
         <a href=https://www.facebook.com/petemccamley target="_blank">Facebook</a>
-        
+        <a href="https://www.linkedin.com/in/peter-mccamley-685415110/" target="_blank" rel="noopener">
+  LinkedIn
+</a>
+
       </div>
     </section>
 
@@ -343,6 +346,7 @@
   </script>
 </body>
 </html>
+
 
 
 
