--- a/index.html
+++ b/index.html
@@ -294,18 +294,29 @@
 
     <!-- EDUCATOR -->
     <section class="card" id="educator">
-      <h2>Arts Educator</h2>
+  <h2>Arts Educator</h2>
 
-      <div class="projects">
-        <div class="project">
-          <img src="educator-corish-wallace.jpg" alt="Corish Wallace Performing Arts School">
-          <div>
-            <b>Corish Wallace Performing Arts School</b>
-            <span>Acting, voice, ensemble, audition craft</span>
-          </div>
-        </div>
+  <div class="projects">
+
+    <div class="project">
+      <img src="educator-corish-wallace.jpg" alt="Corish Wallace Performing Arts School">
+      <div>
+        <b>Corish Wallace Performing Arts School</b>
+        <span>Acting, voice, ensemble, audition craft</span>
       </div>
-    </section>
+    </div>
+
+    <div class="project">
+      <img src="educator-rosslare-strum.jpg" alt="Rosslare Strum and Drum music school">
+      <div>
+        <b>Rosslare Strum & Drum</b>
+        <span>Music education — guitar, rhythm, group performance</span>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
     <!-- LINKS -->
     <section class="card" id="links">
@@ -346,6 +357,7 @@
   </script>
 </body>
 </html>
+
 
 
 
